test/corpus/enum_dcl.txt
========================================
enum_dcl
========================================

enum A {
   A,B,C,D
};

---

(specification
  (enum_dcl
    (identifier)
    (enumerator
      (identifier))
    (enumerator
      (identifier))
    (enumerator
      (identifier))
    (enumerator
      (identifier))))
