test/corpus/typedef_dcl.txt
========================================
typedef_dcl
========================================

typedef sequence<Foo> FooSeq;
typedef u8 uint8_t;
typedef string u8string;
typedef wstring u16string;

---

(specification
  (definition
    (type_dcl
      (typedef_dcl
        (type_declarator
          (template_type_spec
            (sequence_type
              (type_spec
                (simple_type_spec
                  (scoped_name
                    (identifier))))))
          (any_declarators
            (any_declarator
              (simple_declarator
                (identifier))))))))
  (definition
    (type_dcl
      (typedef_dcl
        (type_declarator
          (simple_type_spec
            (scoped_name
              (identifier)))
          (any_declarators
            (any_declarator
              (simple_declarator
                (identifier))))))))
  (definition
    (type_dcl
      (typedef_dcl
        (type_declarator
          (template_type_spec
            (string_type))
          (any_declarators
            (any_declarator
              (simple_declarator
                (identifier))))))))
  (definition
    (type_dcl
      (typedef_dcl
        (type_declarator
          (template_type_spec
            (string_type))
          (any_declarators
            (any_declarator
              (simple_declarator
                (identifier)))))))))
